pro/parse/proParser.py
# Generated from pro.g4 by ANTLR 4.5.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class proParser ( Parser ):

    grammarFileName = "pro.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{'", u"'}'", u"';'", u"'\n'", u"'var'", 
                     u"'const'", u"'array'", u"'func'", u"'('", u"')'", 
                     u"'['", u"']'", u"'<'", u"','", u"'>'", u"'+'", u"'-'", 
                     u"'*'", u"'/'", u"'^'", u"'|'", u"'&'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"Identifier", 
                      u"Constant", u"Decimal", u"Hexadecimal", u"String", 
                      u"Whitespace", u"LineComment", u"BlockComment" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_delimiter = 2
    RULE_declaration = 3
    RULE_type_specifier = 4
    RULE_initializer = 5
    RULE_expression_initializer = 6
    RULE_array_initializer = 7
    RULE_func_initializer = 8
    RULE_call_statement = 9
    RULE_arguments = 10
    RULE_expression = 11
    RULE_binary_expression = 12
    RULE_unary_expression = 13
    RULE_binary_operator = 14
    RULE_unary_operator = 15
    RULE_primary_expression = 16

    ruleNames =  [ u"program", u"statement", u"delimiter", u"declaration", 
                   u"type_specifier", u"initializer", u"expression_initializer", 
                   u"array_initializer", u"func_initializer", u"call_statement", 
                   u"arguments", u"expression", u"binary_expression", u"unary_expression", 
                   u"binary_operator", u"unary_operator", u"primary_expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    Identifier=23
    Constant=24
    Decimal=25
    Hexadecimal=26
    String=27
    Whitespace=28
    LineComment=29
    BlockComment=30

    def __init__(self, input):
        super(proParser, self).__init__(input)
        self.checkVersion("4.5.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(proParser.Identifier, 0)

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(proParser.StatementContext)
            else:
                return self.getTypedRuleContext(proParser.StatementContext,i)


        def getRuleIndex(self):
            return proParser.RULE_program

        def accept(self, visitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = proParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(proParser.Identifier)
            self.state = 35
            self.match(proParser.T__0)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << proParser.T__2) | (1 << proParser.T__3) | (1 << proParser.T__4) | (1 << proParser.T__5) | (1 << proParser.T__6) | (1 << proParser.T__7) | (1 << proParser.Identifier))) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(proParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def call_statement(self):
            return self.getTypedRuleContext(proParser.Call_statementContext,0)


        def declaration(self):
            return self.getTypedRuleContext(proParser.DeclarationContext,0)


        def delimiter(self):
            return self.getTypedRuleContext(proParser.DelimiterContext,0)


        def getRuleIndex(self):
            return proParser.RULE_statement

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = proParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            token = self._input.LA(1)
            if token in [proParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.call_statement()

            elif token in [proParser.T__4, proParser.T__5, proParser.T__6, proParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.declaration()

            elif token in [proParser.T__2, proParser.T__3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.delimiter()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DelimiterContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.DelimiterContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return proParser.RULE_delimiter

        def accept(self, visitor):
            if hasattr(visitor, "visitDelimiter"):
                return visitor.visitDelimiter(self)
            else:
                return visitor.visitChildren(self)




    def delimiter(self):

        localctx = proParser.DelimiterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_delimiter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not(_la==proParser.T__2 or _la==proParser.T__3):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(proParser.Type_specifierContext,0)


        def Identifier(self):
            return self.getToken(proParser.Identifier, 0)

        def initializer(self):
            return self.getTypedRuleContext(proParser.InitializerContext,0)


        def getRuleIndex(self):
            return proParser.RULE_declaration

        def accept(self, visitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = proParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.type_specifier()
            self.state = 52
            self.match(proParser.Identifier)
            self.state = 54
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << proParser.T__8) | (1 << proParser.T__10) | (1 << proParser.T__12))) != 0):
                self.state = 53
                self.initializer()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_specifierContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Type_specifierContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return proParser.RULE_type_specifier

        def accept(self, visitor):
            if hasattr(visitor, "visitType_specifier"):
                return visitor.visitType_specifier(self)
            else:
                return visitor.visitChildren(self)




    def type_specifier(self):

        localctx = proParser.Type_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_specifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << proParser.T__4) | (1 << proParser.T__5) | (1 << proParser.T__6) | (1 << proParser.T__7))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitializerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.InitializerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression_initializer(self):
            return self.getTypedRuleContext(proParser.Expression_initializerContext,0)


        def array_initializer(self):
            return self.getTypedRuleContext(proParser.Array_initializerContext,0)


        def func_initializer(self):
            return self.getTypedRuleContext(proParser.Func_initializerContext,0)


        def getRuleIndex(self):
            return proParser.RULE_initializer

        def accept(self, visitor):
            if hasattr(visitor, "visitInitializer"):
                return visitor.visitInitializer(self)
            else:
                return visitor.visitChildren(self)




    def initializer(self):

        localctx = proParser.InitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initializer)
        try:
            self.state = 61
            token = self._input.LA(1)
            if token in [proParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.expression_initializer()

            elif token in [proParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.array_initializer()

            elif token in [proParser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.func_initializer()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_initializerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Expression_initializerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(proParser.ExpressionContext,0)


        def getRuleIndex(self):
            return proParser.RULE_expression_initializer

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression_initializer"):
                return visitor.visitExpression_initializer(self)
            else:
                return visitor.visitChildren(self)




    def expression_initializer(self):

        localctx = proParser.Expression_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(proParser.T__8)
            self.state = 64
            self.expression()
            self.state = 65
            self.match(proParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_initializerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Array_initializerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(proParser.ExpressionContext,0)


        def getRuleIndex(self):
            return proParser.RULE_array_initializer

        def accept(self, visitor):
            if hasattr(visitor, "visitArray_initializer"):
                return visitor.visitArray_initializer(self)
            else:
                return visitor.visitChildren(self)




    def array_initializer(self):

        localctx = proParser.Array_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_initializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(proParser.T__10)
            self.state = 68
            self.expression()
            self.state = 69
            self.match(proParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_initializerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Func_initializerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(proParser.Identifier, 0)

        def Constant(self):
            return self.getToken(proParser.Constant, 0)

        def String(self):
            return self.getToken(proParser.String, 0)

        def getRuleIndex(self):
            return proParser.RULE_func_initializer

        def accept(self, visitor):
            if hasattr(visitor, "visitFunc_initializer"):
                return visitor.visitFunc_initializer(self)
            else:
                return visitor.visitChildren(self)




    def func_initializer(self):

        localctx = proParser.Func_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_initializer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(proParser.T__12)
            self.state = 72
            self.match(proParser.Identifier)
            self.state = 79
            _la = self._input.LA(1)
            if _la==proParser.T__13:
                self.state = 73
                self.match(proParser.T__13)
                self.state = 74
                self.match(proParser.Constant)
                self.state = 77
                _la = self._input.LA(1)
                if _la==proParser.T__13:
                    self.state = 75
                    self.match(proParser.T__13)
                    self.state = 76
                    self.match(proParser.String)




            self.state = 81
            self.match(proParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Call_statementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Call_statementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(proParser.Identifier, 0)

        def arguments(self):
            return self.getTypedRuleContext(proParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return proParser.RULE_call_statement

        def accept(self, visitor):
            if hasattr(visitor, "visitCall_statement"):
                return visitor.visitCall_statement(self)
            else:
                return visitor.visitChildren(self)




    def call_statement(self):

        localctx = proParser.Call_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_call_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(proParser.Identifier)
            self.state = 84
            self.match(proParser.T__8)
            self.state = 86
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << proParser.T__8) | (1 << proParser.T__21) | (1 << proParser.Identifier) | (1 << proParser.Constant) | (1 << proParser.String))) != 0):
                self.state = 85
                self.arguments(0)


            self.state = 88
            self.match(proParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.ArgumentsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(proParser.ExpressionContext,0)


        def arguments(self):
            return self.getTypedRuleContext(proParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return proParser.RULE_arguments

        def accept(self, visitor):
            if hasattr(visitor, "visitArguments"):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)



    def arguments(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = proParser.ArgumentsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_arguments, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = proParser.ArgumentsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_arguments)
                    self.state = 93
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 94
                    self.match(proParser.T__13)
                    self.state = 95
                    self.expression() 
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def primary_expression(self):
            return self.getTypedRuleContext(proParser.Primary_expressionContext,0)


        def binary_expression(self):
            return self.getTypedRuleContext(proParser.Binary_expressionContext,0)


        def unary_expression(self):
            return self.getTypedRuleContext(proParser.Unary_expressionContext,0)


        def getRuleIndex(self):
            return proParser.RULE_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = proParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.state = 104
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.primary_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.binary_expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.unary_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Binary_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Binary_expressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def primary_expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(proParser.Primary_expressionContext)
            else:
                return self.getTypedRuleContext(proParser.Primary_expressionContext,i)


        def binary_operator(self):
            return self.getTypedRuleContext(proParser.Binary_operatorContext,0)


        def getRuleIndex(self):
            return proParser.RULE_binary_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitBinary_expression"):
                return visitor.visitBinary_expression(self)
            else:
                return visitor.visitChildren(self)




    def binary_expression(self):

        localctx = proParser.Binary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_binary_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.primary_expression()
            self.state = 107
            self.binary_operator()
            self.state = 108
            self.primary_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Unary_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Unary_expressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def unary_operator(self):
            return self.getTypedRuleContext(proParser.Unary_operatorContext,0)


        def primary_expression(self):
            return self.getTypedRuleContext(proParser.Primary_expressionContext,0)


        def getRuleIndex(self):
            return proParser.RULE_unary_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitUnary_expression"):
                return visitor.visitUnary_expression(self)
            else:
                return visitor.visitChildren(self)




    def unary_expression(self):

        localctx = proParser.Unary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_unary_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.unary_operator()
            self.state = 111
            self.primary_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Binary_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Binary_operatorContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return proParser.RULE_binary_operator

        def accept(self, visitor):
            if hasattr(visitor, "visitBinary_operator"):
                return visitor.visitBinary_operator(self)
            else:
                return visitor.visitChildren(self)




    def binary_operator(self):

        localctx = proParser.Binary_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_binary_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << proParser.T__15) | (1 << proParser.T__16) | (1 << proParser.T__17) | (1 << proParser.T__18) | (1 << proParser.T__19) | (1 << proParser.T__20) | (1 << proParser.T__21))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Unary_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Unary_operatorContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return proParser.RULE_unary_operator

        def accept(self, visitor):
            if hasattr(visitor, "visitUnary_operator"):
                return visitor.visitUnary_operator(self)
            else:
                return visitor.visitChildren(self)




    def unary_operator(self):

        localctx = proParser.Unary_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_unary_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(proParser.T__21)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primary_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(proParser.Primary_expressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(proParser.Identifier, 0)

        def Constant(self):
            return self.getToken(proParser.Constant, 0)

        def String(self):
            return self.getToken(proParser.String, 0)

        def expression(self):
            return self.getTypedRuleContext(proParser.ExpressionContext,0)


        def getRuleIndex(self):
            return proParser.RULE_primary_expression

        def accept(self, visitor):
            if hasattr(visitor, "visitPrimary_expression"):
                return visitor.visitPrimary_expression(self)
            else:
                return visitor.visitChildren(self)




    def primary_expression(self):

        localctx = proParser.Primary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_primary_expression)
        try:
            self.state = 124
            token = self._input.LA(1)
            if token in [proParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(proParser.Identifier)

            elif token in [proParser.Constant]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(proParser.Constant)

            elif token in [proParser.String]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(proParser.String)

            elif token in [proParser.T__8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.match(proParser.T__8)
                self.state = 121
                self.expression()
                self.state = 122
                self.match(proParser.T__9)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[10] = self.arguments_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def arguments_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         




